--- a/Practica03/Practica03/Practica03.csproj
+++ b/Practica03/Practica03/Practica03.csproj
@@ -58,22 +58,46 @@
     <Compile Include="ArchivoFuente.Designer.cs">
       <DependentUpon>ArchivoFuente.cs</DependentUpon>
     </Compile>
-    <Compile Include="Form1.cs">
+    <Compile Include="CodigoObjeto.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="CodigoObjeto.Designer.cs">
+      <DependentUpon>CodigoObjeto.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Ensamblador.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Ensamblador.Designer.cs">
+      <DependentUpon>Ensamblador.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Errores.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Errores.Designer.cs">
+      <DependentUpon>Errores.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TablaSimbolos.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="TablaSimbolos.Designer.cs">
+      <DependentUpon>TablaSimbolos.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Archivo Intermedio.resx">
       <DependentUpon>Archivo Intermedio.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ArchivoFuente.resx">
       <DependentUpon>ArchivoFuente.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="CodigoObjeto.resx">
+      <DependentUpon>CodigoObjeto.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Ensamblador.resx">
+      <DependentUpon>Ensamblador.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Errores.resx">
+      <DependentUpon>Errores.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -84,6 +108,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="TablaSimbolos.resx">
+      <DependentUpon>TablaSimbolos.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
