--- a/Practica03/Practica03/Practica03.csproj
+++ b/Practica03/Practica03/Practica03.csproj
@@ -82,6 +82,12 @@
     <Compile Include="Errores.Designer.cs">
       <DependentUpon>Errores.cs</DependentUpon>
     </Compile>
+    <Compile Include="MapaMemoria.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MapaMemoria.Designer.cs">
+      <DependentUpon>MapaMemoria.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SIC.g4.lexer.cs">
@@ -110,6 +116,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Errores.resx">
       <DependentUpon>Errores.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MapaMemoria.resx">
+      <DependentUpon>MapaMemoria.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
